--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="p-3 col-lg-6 offset-lg-3">
 <h3 >Login</h3>
-<hr class="mb-5">
+<hr class="mb-3">
 
 
 <div class="form-floating mb-3">
@@ -24,8 +24,8 @@
 
     <div class="d-flex gap-2">
 
-        <button type="button" class="mb-3 btn btn-primary" (click)="login()">Login</button>
-        <button type="button" class="mb-3 btn btn-secondary" routerLink="/registration">Registration</button>
+        <button type="button" class="mb-3 btn btn-primary" (click)="login()"><i class="bi bi-box-arrow-in-right"></i>&nbsp;&nbsp;Login</button>
+        <button type="button" class="mb-3 btn btn-secondary" routerLink="/registration"><i class="bi bi-person-fill-add"></i>&nbsp;&nbsp;Registration</button>
       
     </div>
 </div>
