--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,8 @@
-<p>main works!</p>
+<div class="p-3">
+    <i class="bi bi-house-fill"></i>
+    <h1>Welcome to our page</h1>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid similique sunt, quia repellendus ad dignissimos alias? Molestias nisi rem facilis, dicta facere atque commodi odio, blanditiis corporis at iusto nihil?
+    </p>
+</div>
