--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,4 +1,4 @@
 <div class="text-center">
-    <h1>404 - CONTENT NOT FOUND</h1>
+    <h1><i class="bi bi-radioactive"></i>404 - CONTENT NOT FOUND<i class="bi bi-radioactive"></i></h1>
 </div>
 
