--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,36 @@
-<p>profile works!</p>
+<div class="p-3 col-lg-6 offset-lg-3">
+    <h3 >Update my profile</h3>
+    <hr class="mb-3">
+    
+    <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="name" >
+        <label for="name">Username:</label>
+      </div>
+    
+    <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="email" >
+        <label for="email">Email address</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="phone" >
+        <label for="phone">Phone:</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="adress" >
+        <label for="adress">Adress:</label>
+      </div>
+      <hr>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="regdate" disabled>
+        <label for="regdate">Registration date:</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="logdate" disabled>
+        <label for="logdate">Last login date:</label>
+      </div>
+    
+    
+            <button type="button" class="mb-3 btn btn-primary" (click)="save()"><i class="bi bi-arrow-repeat"></i>&nbsp;&nbsp;Update profile</button>
+          
+    </div>
+
