--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,6 +1,6 @@
 <div class="p-3 col-lg-6 offset-lg-3">
     <h3 >Registration</h3>
-    <hr class="mb-5">
+    <hr class="mb-3">
     
     <div class="form-floating mb-3">
         <input type="email" class="form-control" id="name" >
@@ -22,18 +22,17 @@
     
     <div class="d-flex mb-3 justify-content-between">
         <div class="form-check mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="rememberme">
-            <label class="form-check-label" for="rememberme">
-              Remember me
+            <input class="form-check-input" type="checkbox" value="" id="conditions">
+            <label class="form-check-label" for="conditions">
+              Accept registration terms and conditions
             </label>
           </div>
-    <a href="" routerLink="/lostpass"> I forgot my password</a>
     </div>
     
         <div class="d-flex gap-2">
     
-            <button type="button" class="mb-3 btn btn-primary" (click)="register()">Registration</button>
-            <button type="button" class="mb-3 btn btn-secondary" routerLink="/login">Login</button>
+            <button type="button" class="mb-3 btn btn-primary" (click)="register()"><i class="bi bi-person-fill-add"></i>&nbsp;&nbsp;Registration</button>
+            <button type="button" class="mb-3 btn btn-secondary" routerLink="/login"><i class="bi bi-box-arrow-in-right"></i>&nbsp;&nbsp;Login</button>
           
         </div>
     </div>
