--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -1,7 +1,7 @@
 
 
-<div class="alert alert-{{severity}} alert-dismissible fade" role="alert">
-    <strong><i class="{{icon}}"></i>  {{title}}</strong>  - {{msg}}
+<div *ngIf="message" class="alert alert-{{message.severity}} alert-dismissible fade show" role="alert">
+    <strong><i class="{{message.icon}}"></i>  {{message.title}}</strong>  - {{message.msg}}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   
